gencpp/SQLiteParser.cpp

// Generated from ./SQLite.g4 by ANTLR 4.7.2


#include "SQLiteVisitor.h"

#include "SQLiteParser.h"


using namespace antlrcpp;
using namespace antlr4;

SQLiteParser::SQLiteParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SQLiteParser::~SQLiteParser() {
  delete _interpreter;
}

std::string SQLiteParser::getGrammarFileName() const {
  return "SQLite.g4";
}

const std::vector<std::string>& SQLiteParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SQLiteParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ParseContext ------------------------------------------------------------------

SQLiteParser::ParseContext::ParseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQLiteParser::ParseContext::EOF() {
  return getToken(SQLiteParser::EOF, 0);
}

std::vector<SQLiteParser::Sql_stmt_or_exprContext *> SQLiteParser::ParseContext::sql_stmt_or_expr() {
  return getRuleContexts<SQLiteParser::Sql_stmt_or_exprContext>();
}

SQLiteParser::Sql_stmt_or_exprContext* SQLiteParser::ParseContext::sql_stmt_or_expr(size_t i) {
  return getRuleContext<SQLiteParser::Sql_stmt_or_exprContext>(i);
}

std::vector<SQLiteParser::ErrorContext *> SQLiteParser::ParseContext::error() {
  return getRuleContexts<SQLiteParser::ErrorContext>();
}

SQLiteParser::ErrorContext* SQLiteParser::ParseContext::error(size_t i) {
  return getRuleContext<SQLiteParser::ErrorContext>(i);
}


size_t SQLiteParser::ParseContext::getRuleIndex() const {
  return SQLiteParser::RuleParse;
}


antlrcpp::Any SQLiteParser::ParseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLiteVisitor*>(visitor))
    return parserVisitor->visitParse(this);
  else
    return visitor->visitChildren(this);
}

SQLiteParser::ParseContext* SQLiteParser::parse() {
  ParseContext *_localctx = _tracker.createInstance<ParseContext>(_ctx, getState());
  enterRule(_localctx, 0, SQLiteParser::RuleParse);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SQLiteParser::UNSUPPORTED_KEYWORDS)
      | (1ULL << SQLiteParser::OPEN_PAR)
      | (1ULL << SQLiteParser::PLUS)
      | (1ULL << SQLiteParser::MINUS)
      | (1ULL << SQLiteParser::K_CAST)
      | (1ULL << SQLiteParser::K_CURRENT_DATE)
      | (1ULL << SQLiteParser::K_CURRENT_TIME)
      | (1ULL << SQLiteParser::K_CURRENT_TIMESTAMP))) != 0) || ((((_la - 70) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 70)) & ((1ULL << (SQLiteParser::K_EXISTS - 70))
      | (1ULL << (SQLiteParser::K_NOT - 70))
      | (1ULL << (SQLiteParser::K_NULL - 70))
      | (1ULL << (SQLiteParser::K_SELECT - 70)))) != 0) || ((((_la - 140) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 140)) & ((1ULL << (SQLiteParser::K_VALUES - 140))
      | (1ULL << (SQLiteParser::IDENTIFIER - 140))
      | (1ULL << (SQLiteParser::NUMERIC_LITERAL - 140))
      | (1ULL << (SQLiteParser::STRING_LITERAL - 140))
      | (1ULL << (SQLiteParser::BLOB_LITERAL - 140))
      | (1ULL << (SQLiteParser::UNEXPECTED_CHAR - 140)))) != 0)) {
      setState(60);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case SQLiteParser::OPEN_PAR:
        case SQLiteParser::PLUS:
        case SQLiteParser::MINUS:
        case SQLiteParser::K_CAST:
        case SQLiteParser::K_CURRENT_DATE:
        case SQLiteParser::K_CURRENT_TIME:
        case SQLiteParser::K_CURRENT_TIMESTAMP:
        case SQLiteParser::K_EXISTS:
        case SQLiteParser::K_NOT:
        case SQLiteParser::K_NULL:
        case SQLiteParser::K_SELECT:
        case SQLiteParser::K_VALUES:
        case SQLiteParser::IDENTIFIER:
        case SQLiteParser::NUMERIC_LITERAL:
        case SQLiteParser::STRING_LITERAL:
        case SQLiteParser::BLOB_LITERAL: {
          setState(58);
          sql_stmt_or_expr();
          break;
        }

        case SQLiteParser::UNSUPPORTED_KEYWORDS:
        case SQLiteParser::UNEXPECTED_CHAR: {
          setState(59);
          error();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(64);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(65);
    match(SQLiteParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ErrorContext ------------------------------------------------------------------

SQLiteParser::ErrorContext::ErrorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQLiteParser::ErrorContext::UNEXPECTED_CHAR() {
  return getToken(SQLiteParser::UNEXPECTED_CHAR, 0);
}

tree::TerminalNode* SQLiteParser::ErrorContext::UNSUPPORTED_KEYWORDS() {
  return getToken(SQLiteParser::UNSUPPORTED_KEYWORDS, 0);
}


size_t SQLiteParser::ErrorContext::getRuleIndex() const {
  return SQLiteParser::RuleError;
}


antlrcpp::Any SQLiteParser::ErrorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLiteVisitor*>(visitor))
    return parserVisitor->visitError(this);
  else
    return visitor->visitChildren(this);
}

SQLiteParser::ErrorContext* SQLiteParser::error() {
  ErrorContext *_localctx = _tracker.createInstance<ErrorContext>(_ctx, getState());
  enterRule(_localctx, 2, SQLiteParser::RuleError);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(71);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SQLiteParser::UNEXPECTED_CHAR: {
        enterOuterAlt(_localctx, 1);
        setState(67);
        dynamic_cast<ErrorContext *>(_localctx)->unexpected_charToken = match(SQLiteParser::UNEXPECTED_CHAR);

          std::string errmsg = "UNEXPECTED_CHAR: " + (dynamic_cast<ErrorContext *>(_localctx)->unexpected_charToken != nullptr ? dynamic_cast<ErrorContext *>(_localctx)->unexpected_charToken->getText() : "");
          auto e = new RecognitionException(errmsg, this, getInputStream(), _localctx, _localctx->unexpected_charToken);
          _errHandler->reportError(this, *e);
          _localctx->exception = std::current_exception();
          _errHandler->recover(this, _localctx->exception);


        break;
      }

      case SQLiteParser::UNSUPPORTED_KEYWORDS: {
        enterOuterAlt(_localctx, 2);
        setState(69);
        dynamic_cast<ErrorContext *>(_localctx)->unsupported_keywordsToken = match(SQLiteParser::UNSUPPORTED_KEYWORDS);

          std::string errmsg = "UNSUPPORTED_KEYWORD: " + (dynamic_cast<ErrorContext *>(_localctx)->unsupported_keywordsToken != nullptr ? dynamic_cast<ErrorContext *>(_localctx)->unsupported_keywordsToken->getText() : "");
          auto e = new RecognitionException(errmsg, this, getInputStream(), _localctx, dynamic_cast<ErrorContext *>(_localctx)->unsupported_keywordsToken);
          _errHandler->reportError(this, *e);
          _localctx->exception = std::current_exception();
          _errHandler->recover(this, _localctx->exception);


        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Sql_stmt_or_exprContext ------------------------------------------------------------------

SQLiteParser::Sql_stmt_or_exprContext::Sql_stmt_or_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLiteParser::Sql_stmtContext* SQLiteParser::Sql_stmt_or_exprContext::sql_stmt() {
  return getRuleContext<SQLiteParser::Sql_stmtContext>(0);
}

SQLiteParser::ExprContext* SQLiteParser::Sql_stmt_or_exprContext::expr() {
  return getRuleContext<SQLiteParser::ExprContext>(0);
}


size_t SQLiteParser::Sql_stmt_or_exprContext::getRuleIndex() const {
  return SQLiteParser::RuleSql_stmt_or_expr;
}


antlrcpp::Any SQLiteParser::Sql_stmt_or_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLiteVisitor*>(visitor))
    return parserVisitor->visitSql_stmt_or_expr(this);
  else
    return visitor->visitChildren(this);
}

SQLiteParser::Sql_stmt_or_exprContext* SQLiteParser::sql_stmt_or_expr() {
  Sql_stmt_or_exprContext *_localctx = _tracker.createInstance<Sql_stmt_or_exprContext>(_ctx, getState());
  enterRule(_localctx, 4, SQLiteParser::RuleSql_stmt_or_expr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(75);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SQLiteParser::K_SELECT:
      case SQLiteParser::K_VALUES: {
        enterOuterAlt(_localctx, 1);
        setState(73);
        sql_stmt();
        break;
      }

      case SQLiteParser::OPEN_PAR:
      case SQLiteParser::PLUS:
      case SQLiteParser::MINUS:
      case SQLiteParser::K_CAST:
      case SQLiteParser::K_CURRENT_DATE:
      case SQLiteParser::K_CURRENT_TIME:
      case SQLiteParser::K_CURRENT_TIMESTAMP:
      case SQLiteParser::K_EXISTS:
      case SQLiteParser::K_NOT:
      case SQLiteParser::K_NULL:
      case SQLiteParser::IDENTIFIER:
      case SQLiteParser::NUMERIC_LITERAL:
      case SQLiteParser::STRING_LITERAL:
      case SQLiteParser::BLOB_LITERAL: {
        enterOuterAlt(_localctx, 2);
        setState(74);
        expr(0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Sql_stmtContext ------------------------------------------------------------------

SQLiteParser::Sql_stmtContext::Sql_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLiteParser::Simple_select_stmtContext* SQLiteParser::Sql_stmtContext::simple_select_stmt() {
  return getRuleContext<SQLiteParser::Simple_select_stmtContext>(0);
}

std::vector<tree::TerminalNode *> SQLiteParser::Sql_stmtContext::SCOL() {
  return getTokens(SQLiteParser::SCOL);
}

tree::TerminalNode* SQLiteParser::Sql_stmtContext::SCOL(size_t i) {
  return getToken(SQLiteParser::SCOL, i);
}

SQLiteParser::Select_stmtContext* SQLiteParser::Sql_stmtContext::select_stmt() {
  return getRuleContext<SQLiteParser::Select_stmtContext>(0);
}


size_t SQLiteParser::Sql_stmtContext::getRuleIndex() const {
  return SQLiteParser::RuleSql_stmt;
}


antlrcpp::Any SQLiteParser::Sql_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLiteVisitor*>(visitor))
    return parserVisitor->visitSql_stmt(this);
  else
    return visitor->visitChildren(this);
}

SQLiteParser::Sql_stmtContext* SQLiteParser::sql_stmt() {
  Sql_stmtContext *_localctx = _tracker.createInstance<Sql_stmtContext>(_ctx, getState());
  enterRule(_localctx, 6, SQLiteParser::RuleSql_stmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(91);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(77);
      simple_select_stmt();
      setState(81);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == SQLiteParser::SCOL) {
        setState(78);
        match(SQLiteParser::SCOL);
        setState(83);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(84);
      select_stmt();
      setState(88);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == SQLiteParser::SCOL) {
        setState(85);
        match(SQLiteParser::SCOL);
        setState(90);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Simple_select_stmtContext ------------------------------------------------------------------

SQLiteParser::Simple_select_stmtContext::Simple_select_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLiteParser::Select_coreContext* SQLiteParser::Simple_select_stmtContext::select_core() {
  return getRuleContext<SQLiteParser::Select_coreContext>(0);
}

tree::TerminalNode* SQLiteParser::Simple_select_stmtContext::K_ORDER() {
  return getToken(SQLiteParser::K_ORDER, 0);
}

tree::TerminalNode* SQLiteParser::Simple_select_stmtContext::K_BY() {
  return getToken(SQLiteParser::K_BY, 0);
}

std::vector<SQLiteParser::Ordering_termContext *> SQLiteParser::Simple_select_stmtContext::ordering_term() {
  return getRuleContexts<SQLiteParser::Ordering_termContext>();
}

SQLiteParser::Ordering_termContext* SQLiteParser::Simple_select_stmtContext::ordering_term(size_t i) {
  return getRuleContext<SQLiteParser::Ordering_termContext>(i);
}

tree::TerminalNode* SQLiteParser::Simple_select_stmtContext::K_LIMIT() {
  return getToken(SQLiteParser::K_LIMIT, 0);
}

std::vector<SQLiteParser::ExprContext *> SQLiteParser::Simple_select_stmtContext::expr() {
  return getRuleContexts<SQLiteParser::ExprContext>();
}

SQLiteParser::ExprContext* SQLiteParser::Simple_select_stmtContext::expr(size_t i) {
  return getRuleContext<SQLiteParser::ExprContext>(i);
}

std::vector<tree::TerminalNode *> SQLiteParser::Simple_select_stmtContext::COMMA() {
  return getTokens(SQLiteParser::COMMA);
}

tree::TerminalNode* SQLiteParser::Simple_select_stmtContext::COMMA(size_t i) {
  return getToken(SQLiteParser::COMMA, i);
}

tree::TerminalNode* SQLiteParser::Simple_select_stmtContext::K_OFFSET() {
  return getToken(SQLiteParser::K_OFFSET, 0);
}


size_t SQLiteParser::Simple_select_stmtContext::getRuleIndex() const {
  return SQLiteParser::RuleSimple_select_stmt;
}


antlrcpp::Any SQLiteParser::Simple_select_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLiteVisitor*>(visitor))
    return parserVisitor->visitSimple_select_stmt(this);
  else
    return visitor->visitChildren(this);
}

SQLiteParser::Simple_select_stmtContext* SQLiteParser::simple_select_stmt() {
  Simple_select_stmtContext *_localctx = _tracker.createInstance<Simple_select_stmtContext>(_ctx, getState());
  enterRule(_localctx, 8, SQLiteParser::RuleSimple_select_stmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    select_core();
    setState(104);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SQLiteParser::K_ORDER) {
      setState(94);
      match(SQLiteParser::K_ORDER);
      setState(95);
      match(SQLiteParser::K_BY);
      setState(96);
      ordering_term();
      setState(101);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == SQLiteParser::COMMA) {
        setState(97);
        match(SQLiteParser::COMMA);
        setState(98);
        ordering_term();
        setState(103);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(112);
    _errHandler->sync(this);
